--- a/Automation-App/package.json
+++ b/Automation-App/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^10.0.5",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
@@ -25,9 +26,16 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
+    "ion-datetime-picker": "^0.5.2",
+    "moment": "^2.27.0",
+    "ng2-charts": "^2.3.2",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-date-picker": "0.0.24",
     "rxjs": "~6.5.1",
+    "save": "^2.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
