Auth Gaurd Added and Token Expiration Bug Fixed

--- a/Automation-App/package.json
+++ b/Automation-App/package.json
@@ -16,6 +16,7 @@
     "@angular/animations": "^10.0.5",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
@@ -30,6 +31,7 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
+    "firebase": "^8.5.0",
     "ion-datetime-picker": "^0.5.2",
     "moment": "^2.27.0",
     "ng2-charts": "^2.3.2",
