--- a/Automation-App/package.json
+++ b/Automation-App/package.json
@@ -27,12 +27,15 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage-angular": "^3.0.6",
     "@ngrx/store": "^10.1.2",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
+    "cordova-sqlite-storage": "^6.0.0",
     "core-js": "^2.5.4",
     "firebase": "^8.5.0",
     "ion-datetime-picker": "^0.5.2",
+    "localforage-cordovasqlitedriver": "^1.8.0",
     "moment": "^2.27.0",
     "ng2-charts": "^2.3.2",
     "ngx-bootstrap": "^5.6.1",
