add device functionality tested and complete

--- a/Automation-App/android/app/src/main/assets/capacitor.config.json
+++ b/Automation-App/android/app/src/main/assets/capacitor.config.json
@@ -1,8 +1,7 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "kansastek.hydrotek",
   "appName": "Automation-App",
   "bundledWebRuntime": false,
   "npmClient": "npm",
-  "webDir": "www",
-  "cordova": {}
+  "webDir": "www"
 }
