--- a/Automation-App/capacitor.config.json
+++ b/Automation-App/capacitor.config.json
@@ -3,6 +3,5 @@
   "appName": "Automation-App",
   "bundledWebRuntime": false,
   "npmClient": "npm",
-  "webDir": "www",
-  "cordova": {}
+  "webDir": "www"
 }
