force cleartext connections on the android app. update version number.

--- a/Automation-App/android/app/src/main/assets/capacitor.config.json
+++ b/Automation-App/android/app/src/main/assets/capacitor.config.json
@@ -3,5 +3,8 @@
   "appName": "Hydrotek Farm",
   "bundledWebRuntime": false,
   "npmClient": "npm",
-  "webDir": "www"
+  "webDir": "www",
+  "android": {
+    "allowMixedContent": true
+  }
 }
