--- a/Automation-App/package.json
+++ b/Automation-App/package.json
@@ -38,6 +38,7 @@
     "ion-datetime-picker": "^0.5.2",
     "localforage-cordovasqlitedriver": "^1.8.0",
     "moment": "^2.27.0",
+    "mongoose": "^6.4.0",
     "ng2-charts": "^2.3.2",
     "ngx-bootstrap": "^5.6.1",
     "ngx-date-picker": "0.0.24",
