--- a/Automation-App/package.json
+++ b/Automation-App/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@angular/animations": "^10.0.5",
     "@angular/common": "~8.2.14",
-    "@angular/core": "~8.2.14",
+    "@angular/core": "^14.0.5",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
@@ -27,6 +27,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/cli": "^6.20.1",
     "@ionic/storage-angular": "^3.0.6",
     "@ngrx/store": "^10.1.2",
     "bootstrap": "^4.5.0",
@@ -39,6 +40,7 @@
     "localforage-cordovasqlitedriver": "^1.8.0",
     "moment": "^2.27.0",
     "mongoose": "^6.4.0",
+    "natives": "^1.1.6",
     "ng2-charts": "^2.3.2",
     "ngx-bootstrap": "^5.6.1",
     "ngx-date-picker": "0.0.24",
@@ -48,10 +50,10 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "8.3.28",
+    "@angular-devkit/build-angular": "^0.803.24",
+    "@angular/cli": "14.0.5",
     "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
+    "@angular/compiler-cli": "^14.0.5",
     "@angular/language-service": "~8.2.14",
     "@capacitor/cli": "2.4.5",
     "@ionic/angular-toolkit": "^2.1.1",
@@ -62,7 +64,7 @@
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^6.4.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
